--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,12 +6,13 @@
           content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
     <title>清爽简洁的登录页面_dowebok</title>
     <link rel="stylesheet" href="/css/logins.css">
+    <link rel="stylesheet" href="/lib/layui/css/layui.css">
     <style>
 
     </style>
 </head>
 <body>
-<form th:action="@{/login}" th:method="post">
+<form class="layui-form" th:action="@{/login}" th:method="post">
     <div class="dowebok">
         <div class="logo"></div>
         <div class="form-item">
@@ -23,7 +24,7 @@
             <!--        <p class="tip">邮箱或密码不正确</p>-->
         </div>
         <div class="form-item">
-            <button id="submit">登 录</button>
+            <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
         </div>
         <div class="reg-bar">
             <a class="reg" href="http://www.dowebok.com" target="_blank">立即注册</a>
@@ -32,6 +33,7 @@
     </div>
 </form>
 <script src="./login/jquery.min.js"></script>
+<script src="./lib/layui/layui.all.js"></script>
 <script>
     $(function () {
         $('input').val('')
@@ -39,6 +41,26 @@
             $('.tip').show()
         })
     })
+    layui.use('form', function(){
+        var form = layui.form,
+            $=layui.$;
+
+        //监听提交
+        form.on('submit(formDemo)', function(data){
+            $.ajax({
+                url:'/login',
+                method:'POST',
+                data:data.field,
+                success:function (res) {
+                    if (res.status==200){
+                        window.location.href=res.data;
+                    }
+                }
+            })
+
+            return false;
+        });
+    });
 </script>
 </body>
 </html>
