用户管理的部分已更新

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
-    <title>清爽简洁的登录页面_dowebok</title>
+    <title>公益众筹系统注册界面</title>
     <link rel="stylesheet" href="/css/logins.css">
     <link rel="stylesheet" href="/lib/layui/css/layui.css">
     <style>
@@ -20,7 +20,7 @@
             <!--        <p class="tip">请输入合法的邮箱地址</p>-->
         </div>
         <div class="form-item">
-            <input id="password" name="password" type="password" autocomplete="off" placeholder="登录密码">
+            <input id="password" name="password" type="password" autocomplete="off" placeholder="密码">
             <!--        <p class="tip">邮箱或密码不正确</p>-->
         </div>
         <div class="form-item">
@@ -38,9 +38,11 @@
             $('.tip').show()
         })
     })
-    layui.use('form', function(){
+    layui.use(['form','layer'], function(){
         var form = layui.form,
-            $=layui.$;
+            $=layui.$,
+            layer=layui.layer;
+
 
         //监听提交
         form.on('submit(formDemo)', function(data){
@@ -50,7 +52,12 @@
                 data:data.field,
                 success:function (res) {
                     if (res.status==200){
-                        window.location.href=res.data;
+                        layer.msg('注册成功!', {
+                            icon: 6,
+                            time: 2000 //2秒关闭（如果不配置，默认是3秒）
+                        }, function(){
+                            window.location.href="/login";
+                        });
                     }
                 }
             })
