--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
-    <title>清爽简洁的登录页面_dowebok</title>
+    <title>公益众筹系统登录界面</title>
     <link rel="stylesheet" href="/css/logins.css">
     <link rel="stylesheet" href="/lib/layui/css/layui.css">
     <style>
@@ -20,15 +20,15 @@
             <!--        <p class="tip">请输入合法的邮箱地址</p>-->
         </div>
         <div class="form-item">
-            <input id="password" name="password" type="password" autocomplete="off" placeholder="登录密码">
+            <input id="password" name="password" type="password" autocomplete="off" placeholder="密码">
             <!--        <p class="tip">邮箱或密码不正确</p>-->
         </div>
         <div class="form-item">
             <button class="layui-btn" lay-submit lay-filter="formDemo">登录</button>
         </div>
         <div class="reg-bar">
-            <a class="reg" href="/register" target="_blank">立即注册</a>
-            <a class="forget" href="http://www.dowebok.com" target="_blank">忘记密码</a>
+            <a class="reg" th:href="@{/register}">立即注册</a>
+            <a class="forget" href="http://www.dowebok.com">忘记密码</a>
         </div>
     </div>
 </form>
@@ -53,7 +53,12 @@
                 data:data.field,
                 success:function (res) {
                     if (res.status==200){
-                        window.location.href=res.data;
+                        layer.msg('登录成功', {
+                            icon: 6,
+                            time: 2000 //2秒关闭（如果不配置，默认是3秒）
+                        }, function(){
+                            window.location.href=res.data;
+                        });
                     }
                 }
             })
