用户管理的部分已更新

--- a/src/main/resources/templates/backed/admin.html
+++ b/src/main/resources/templates/backed/admin.html
@@ -61,14 +61,14 @@
                     <i class="iconfont nav_right">&#xe697;</i></a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('黑名单','/blackList',true)">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>黑名单</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('白名单','member-del.html')">
+                        <a onclick="xadmin.add_tab('白名单','/toWhiteList')">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>白名单</cite></a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('黑名单','/toBlackList',true)">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>黑名单</cite></a>
                     </li>
                 </ul>
             </li>
