--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-<form class="layui-form" th:action="@{/register}" th:method="post">
+<form class="layui-form" th:action="@{/user/register}" th:method="post">
     <div class="dowebok">
         <div class="logo"></div>
         <div class="form-item">
@@ -47,7 +47,7 @@
         //监听提交
         form.on('submit(formDemo)', function(data){
             $.ajax({
-                url:'/register',
+                url:'/user/register',
                 method:'POST',
                 data:data.field,
                 success:function (res) {
@@ -56,7 +56,7 @@
                             icon: 6,
                             time: 2000 //2秒关闭（如果不配置，默认是3秒）
                         }, function(){
-                            window.location.href="/login";
+                            window.location.href="/user/login";
                         });
                     }
                 }
