--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,7 +52,7 @@
                 method:'POST',
                 data:data.field,
                 success:function (res) {
-                    if (res.status==200){
+                    if (res.code==200){
                         layer.msg('登录成功', {
                             icon: 6,
                             time: 2000 //2秒关闭（如果不配置，默认是3秒）
