--- a/src/main/resources/templates/backed/blackList.html
+++ b/src/main/resources/templates/backed/blackList.html
@@ -1,35 +1,109 @@
 <!DOCTYPE html>
+<!--引入thymeleaf-->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>Layui</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" th:href="@{/lib/layui/css/layui.css}" media="all">
-    <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
-</head>
-<body>
+    <meta name="viewport"
+          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8"/>
+    <title>从化农产品后台管理</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/lib/layui/css/layui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/font.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/xadmin.css}">
+    <!--<script type="text/javascript" th:src="@{/layui/layui.js}"></script>-->
+    <script type="text/javascript" th:src="@{/js/xadmin.js}" charset="UTF-8"></script>
 
-<table class="layui-hide" id="test" lay-filter="test"></table>
+
+    <!--[if lt IE 9]>
+    <script th:src="@{https://cdn.staticfile.org/html5shiv/r29/html5.min.js}"></script>
+    <script th:src="@{https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js}"></script>
+    <![endif]-->
+
+
+</head>
 
 <script type="text/html" id="toolbarDemo">
-    <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
-        <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
-        <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button>
-    </div>
+    <button class="layui-btn layui-btn-sm" lay-event="delete">删除</button>
 </script>
-
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    <a class="layui-btn layui-btn-xs" lay-event="recommend">推荐</a>
 </script>
+<body>
+<div class="x-nav">
+          <span class="layui-breadcrumb">
+            <a href="">首页</a>
+            <a href="">演示</a>
+            <a>
+              <cite>导航元素</cite></a>
+          </span>
+    <!--<a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right"
+       onclick="location.reload()" title="刷新">
+        <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>-->
+</div>
+<div class="layui-fluid">
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12">
+            <div class="layui-card">
+                <div class="layui-card-body">
+                    <form class="layui-form" action="">
+                        <div class="layui-form layui-form-pane">
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <input type="text" id="name" name="name" placeholder="请输入姓名"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="sfzh" name="sfzh" placeholder="请输入身份证号码"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="phone" name="phone" placeholder="请输入联系方式"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="orgCode" name="orgCode" placeholder="请输入组织编号"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="orgName" name="orgName" placeholder="请输入组织名称"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="role" name="role" placeholder="请输入角色"
+                                           autocomplete="off" class="layui-input">
+                                </div>
 
+                                <div class="layui-inline" style="margin-left: 9px">
+                                    <button class="layui-btn" lay-submit="" lay-filter="search"><i class="layui-icon">&#xe615;</i>
+                                    </button>
+                                    <button type="reset" class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe669;</i></button>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div>
+                            <!--<table class="layui-table"></table>-->
+                            <table class="layui-hide" id="test" lay-filter="test"></table>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--<script type="text/html" id="img">-->
+<!--    <div class="layer-photos-demo">-->
+<!--        <img th:layer-src="${filePath}+'{{d.picture}}'" th:src="${filePath}+'{{d.picture}}'" height="30" width="50"-->
+<!--             alt="{{d.picture}}"-->
+<!--             style="border: 1px solid #aaaaaa;cursor: pointer">-->
+<!--    </div>-->
+<!--</script>-->
 
 <script th:src="@{/lib/layui/layui.all.js}" charset="utf-8"></script>
-<!-- 注意：如果你直接复制所有代码到本地，上述 JS 路径需要改成你本地的 -->
-
 <script>
     layui.use('table', function(){
         var table = layui.table;
@@ -47,30 +121,30 @@
             ,title: '黑名单数据表'
             ,cols: [
                 [
-                {type: 'checkbox', fixed: 'left'}
-                ,{
+                    {type: 'checkbox', fixed: 'left'}
+                    ,{
                     align: 'center', title: '序号', width: 80, templet: function (data) {
                         return (data.LAY_TABLE_INDEX + 1);
                     }
                 }
-                ,{field:'account', title:'用户名', width:120, edit: 'text'}
-                ,{field:'role', title:'角色', width:120, edit: 'text'}
-                ,{field:'sex', title:'性别', width:80, edit: 'text', sort: true}
-                ,{field:'name', title:'姓名', width:100}
-                ,{field:'sfzh', title:'身份证'}
-                ,{field:'nation', title:'民族', width:80, sort: true}
-                ,{field:'birth', title:'出生时间', width:120}
-                ,{field:'phone', title:'联系电话', width:100, sort: true}
-                ,{field:'area', title:'籍贯', width:120}
-                ,{field:'filePath', title:'文件', width:120}
-                ,{field:'orgCode', title:'组织编号', width:120}
-                ,{field:'orgName', title:'组织名字', width:120}
-                ,{field:'balance', title:'账户余额', width:120}
-                ,{field:'status', title:'账号状态', width:120}
-                ,{field:'createTime', title:'创建时间', width:120}
-                ,{field:'updateTime', title:'更新时间', width:120}
-                ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:150}
-            ]
+                    ,{field:'account', title:'用户名', width:120, edit: 'text'}
+                    ,{field:'role', title:'角色', width:120, edit: 'text'}
+                    ,{field:'sex', title:'性别', width:80, edit: 'text', sort: true}
+                    ,{field:'name', title:'姓名', width:100}
+                    ,{field:'sfzh', title:'身份证'}
+                    ,{field:'nation', title:'民族', width:80, sort: true}
+                    ,{field:'birth', title:'出生时间', width:120}
+                    ,{field:'phone', title:'联系电话', width:100, sort: true}
+                    ,{field:'area', title:'籍贯', width:120}
+                    ,{field:'filePath', title:'文件', width:120}
+                    ,{field:'orgCode', title:'组织编号', width:120}
+                    ,{field:'orgName', title:'组织名字', width:120}
+                    ,{field:'balance', title:'账户余额', width:120}
+                    ,{field:'status', title:'账号状态', width:120}
+                    ,{field:'createTime', title:'创建时间', width:120}
+                    ,{field:'updateTime', title:'更新时间', width:120}
+                    ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:160}
+                ]
             ]
             ,page: true
         });
@@ -121,6 +195,5 @@
         });
     });
 </script>
-
 </body>
 </html>
