--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -51,7 +51,7 @@
                 method:'POST',
                 data:data.field,
                 success:function (res) {
-                    if (res.status==200){
+                    if (res.code==200){
                         layer.msg('注册成功!', {
                             icon: 6,
                             time: 2000 //2秒关闭（如果不配置，默认是3秒）
