用户管理的部分已更新

--- a/src/main/resources/templates/backed/whiteList.html
+++ b/src/main/resources/templates/backed/whiteList.html
@@ -8,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8"/>
     <title>从化农产品后台管理</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/lib/layui/css/layui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/layui2.6/css/layui.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/font.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/xadmin.css}">
     <!--<script type="text/javascript" th:src="@{/layui/layui.js}"></script>-->
@@ -24,12 +24,10 @@
 </head>
 
 <script type="text/html" id="toolbarDemo">
-    <button class="layui-btn layui-btn-sm" lay-event="delete">删除</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete">批量拉黑</button>
 </script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-    <a class="layui-btn layui-btn-xs" lay-event="recommend">推荐</a>
+    <a class="layui-btn layui-btn-xs" lay-event="del">拉进黑名单</a>
 </script>
 <body>
 <div class="x-nav">
@@ -103,7 +101,7 @@
 <!--    </div>-->
 <!--</script>-->
 
-<script th:src="@{/lib/layui/layui.all.js}" charset="utf-8"></script>
+<script type="text/javascript" th:src="@{/layui2.6/layui.js}" charset="utf-8"></script>
 <script>
     layui.use(['table', "form", 'element', 'layer'], function () {
         const element = layui.element;
@@ -115,6 +113,7 @@
         const tableIns = table.render({
             elem: '#test',
             type: 'GET'
+            , id: 'test'
             ,url:'/user/userWhiteList'
             , where: {
                 name: $('input[name="name"]').val(),
@@ -125,12 +124,7 @@
                 role: $('input[name="role"]').val(),
             }
             ,toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
-            ,defaultToolbar: ['filter', 'exports', 'print', { //自定义头部工具栏右侧图标。如无需自定义，去除该参数即可
-                title: '提示'
-                ,layEvent: 'LAYTABLE_TIPS'
-                ,icon: 'layui-icon-tips'
-            }]
-            ,title: '黑名单数据表'
+            ,title: '白名单数据表'
             ,cols: [
                 [
                     {type: 'checkbox', fixed: 'left'}
@@ -155,7 +149,7 @@
                     ,{field:'status', title:'账号状态', width:120}
                     ,{field:'createTime', title:'创建时间', width:120}
                     ,{field:'updateTime', title:'更新时间', width:120}
-                    ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:160}
+                    ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:100}
                 ]
             ]
             ,page: true
@@ -172,48 +166,73 @@
             return false;
         });
 
-        //头工具栏事件
-        table.on('toolbar(test)', function(obj){
-            var checkStatus = table.checkStatus(obj.config.id);
-            switch(obj.event){
-                case 'getCheckData':
-                    var data = checkStatus.data;
-                    layer.alert(JSON.stringify(data));
-                    break;
-                case 'getCheckLength':
-                    var data = checkStatus.data;
-                    layer.msg('选中了：'+ data.length + ' 个');
-                    break;
-                case 'isAll':
-                    layer.msg(checkStatus.isAll ? '全选': '未全选');
-                    break;
+        //监听行工具事件
+        table.on('tool(test)',function (obj) {
+            const data=obj.data,
+                layEvent=obj.event;
 
-                //自定义头工具栏右侧图标 - 提示
-                case 'LAYTABLE_TIPS':
-                    layer.alert('这是工具栏右侧自定义的一个图标按钮');
-                    break;
-            };
+            if (layEvent==='del'){
+                layer.confirm('确定要拉其进黑名单吗?',function (index) {
+                    obj.del()
+                    layer.close(index);
+                    $.ajax({
+                        url: '/user/blackUser?id='+data.id ,
+                        type:'POST',
+                        success:function (res) {
+                            if (res.code==200){
+                                layer.msg("操作成功!", {icon: 6});
+                                setTimeout(function () {
+                                    location.reload();
+                                }, 1000);
+                            }else {
+                                layer.msg("操作失败!",{icon:5})
+                            }
+                        }
+                    });
+                    return false;
+                });
+            }
         });
 
-        //监听行工具事件
-        table.on('tool(test)', function(obj){
-            var data = obj.data;
-            //console.log(obj)
-            if(obj.event === 'del'){
-                layer.confirm('真的删除行么', function(index){
-                    obj.del();
-                    layer.close(index);
-                });
-            } else if(obj.event === 'edit'){
-                layer.prompt({
-                    formType: 2
-                    ,value: data.email
-                }, function(value, index){
-                    obj.update({
-                        email: value
+
+        //监听头工具栏事件
+        table.on('toolbar(test)', function (obj) {
+
+            const checkStatus = table.checkStatus(obj.config.id);
+            let data = checkStatus.data;
+            let ids = [];
+            layui.each(data, (index, item) => {
+                ids.push(item.id);
+            });
+            switch (obj.event) {
+                case 'delete':
+                    if (data.length === 0) {
+                        layer.msg('请选择数据', {icon: 2, anim: 6});
+                        return;
+                    }
+                    layer.confirm('确定进行批量拉进黑名单操作吗', {icon: 3, closeBtn: 0}, function (index) {
+                        $.ajax({
+                            url: '/user/blackUserChangesList',
+                            type: 'POST',
+                            data: JSON.stringify(ids),
+                            contentType: "application/json;charset=UTF-8",
+                            success: function (res) {
+                                console.log(res)
+                                if (res.code==200) {
+                                    layer.msg("操作成功", {icon: 6});
+                                    setTimeout(function () {
+                                        location.reload();
+                                    }, 1000);
+                                }
+                            },
+                            error: function () {
+                                console.log('111111')
+                                layer.msg("操作失败", {icon: 2})
+                            }
+                        });
                     });
-                    layer.close(index);
-                });
+                    console.log('abc')
+                    break;
             }
         });
     });
