--- a/src/main/resources/templates/backed/blackList.html
+++ b/src/main/resources/templates/backed/blackList.html
@@ -24,12 +24,10 @@
 </head>
 
 <script type="text/html" id="toolbarDemo">
-    <button class="layui-btn layui-btn-sm" lay-event="delete">删除</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete">批量拉白</button>
 </script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-    <a class="layui-btn layui-btn-xs" lay-event="recommend">推荐</a>
+    <a class="layui-btn layui-btn-xs" lay-event="del">移出黑名单</a>
 </script>
 <body>
 <div class="x-nav">
@@ -105,10 +103,14 @@
 
 <script th:src="@{/lib/layui/layui.all.js}" charset="utf-8"></script>
 <script>
-    layui.use('table', function(){
-        var table = layui.table;
+    layui.use(['table', "form", 'element', 'layer'], function () {
+        const element = layui.element;
+        const table = layui.table;
+        const form = layui.form;
+        const layer = layui.layer;
+        const $ = layui.$
 
-        table.render({
+        const tableIns = table.render({
             elem: '#test',
             type: 'GET'
             ,url:'/user/userBlackList'
@@ -143,56 +145,24 @@
                     ,{field:'status', title:'账号状态', width:120}
                     ,{field:'createTime', title:'创建时间', width:120}
                     ,{field:'updateTime', title:'更新时间', width:120}
-                    ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:160}
+                    ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:100}
                 ]
             ]
             ,page: true
         });
 
-        //头工具栏事件
-        table.on('toolbar(test)', function(obj){
-            var checkStatus = table.checkStatus(obj.config.id);
-            switch(obj.event){
-                case 'getCheckData':
-                    var data = checkStatus.data;
-                    layer.alert(JSON.stringify(data));
-                    break;
-                case 'getCheckLength':
-                    var data = checkStatus.data;
-                    layer.msg('选中了：'+ data.length + ' 个');
-                    break;
-                case 'isAll':
-                    layer.msg(checkStatus.isAll ? '全选': '未全选');
-                    break;
-
-                //自定义头工具栏右侧图标 - 提示
-                case 'LAYTABLE_TIPS':
-                    layer.alert('这是工具栏右侧自定义的一个图标按钮');
-                    break;
-            };
+        //搜索重载
+        form.on('submit(search)', function (data) {
+            tableIns.reload({
+                where: data.field,
+                page: {
+                    curr: 1
+                }
+            });
+            return false;
         });
 
-        //监听行工具事件
-        table.on('tool(test)', function(obj){
-            var data = obj.data;
-            //console.log(obj)
-            if(obj.event === 'del'){
-                layer.confirm('真的删除行么', function(index){
-                    obj.del();
-                    layer.close(index);
-                });
-            } else if(obj.event === 'edit'){
-                layer.prompt({
-                    formType: 2
-                    ,value: data.email
-                }, function(value, index){
-                    obj.update({
-                        email: value
-                    });
-                    layer.close(index);
-                });
-            }
-        });
+
     });
 </script>
 </body>
